--- a/WebApp/src/app/components/auth/login/login.component.html
+++ b/WebApp/src/app/components/auth/login/login.component.html
@@ -3,22 +3,24 @@
     <mat-card>
       <mat-card-title>Вход</mat-card-title>
       <mat-card-content>
-          <mat-form-field appearance="outline">
-            <mat-label>Email:</mat-label>
-            <input formControlName="email" matInput type="email">
-          </mat-form-field>
-          <mat-form-field appearance="outline">
-            <mat-label>Пароль:</mat-label>
-            <input formControlName="password" matInput type="password">
-          </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Имя пользователя или email:</mat-label>
+          <input formControlName="nameOrEmail" matInput type="text" autocomplete="nameOrEmail">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Пароль:</mat-label>
+          <input formControlName="password" matInput type="password" autocomplete="password">
+        </mat-form-field>
+        <ng-container *ngIf="wrongLoginOrPassword | async">
+          <p class="red-text">Неправильный пароль или login</p>
+        </ng-container>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button type="button">Забыли пароль</button>
         <button mat-button type="button" [routerLink]="['/register']">Создать аккаунт</button>
         <button mat-raised-button
                 color="primary"
                 type="submit"
-                [disabled]="dataForm.invalid">
+                [disabled]="dataForm.invalid || dataForm.disabled">
           Войти
         </button>
       </mat-card-actions>
