--- a/WebApp/src/styles.sass
+++ b/WebApp/src/styles.sass
@@ -2,4 +2,11 @@ html, body
   height: 100%
 body
   margin: 0
+  padding: 0
   font-family: Roboto, "Helvetica Neue", sans-serif
+
+.dialog-backdrop
+  background-color: transparent !important
+
+.red-text
+  color: red
