--- a/WebApp/src/app/components/dashboard/chat/dialogs/settings/settings.component.html
+++ b/WebApp/src/app/components/dashboard/chat/dialogs/settings/settings.component.html
@@ -2,5 +2,6 @@
   <h3 mat-dialog-title>Настройки</h3>
   <mat-dialog-content>
     <button mat-button (click)="logout()">Выйти</button>
+    <button mat-button (click)="contacts()">Контакты</button>
   </mat-dialog-content>
 </div>
