--- a/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.html
+++ b/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.html
@@ -1,7 +1,7 @@
 <!-- Панель со списком чатов -->
 <div class="chat-panel">
   <div class="chat-header">
-    <button (click)="openSettings()" #settingsButton mat-icon-button color="primary" class="settings-button">
+    <button (click)="openSettings()" mat-icon-button color="primary" class="settings-button">
       <mat-icon>menu</mat-icon>
     </button>
     <div class="custom-search">
@@ -11,6 +11,7 @@
       <input type="text" class="search-input" placeholder="Поиск">
     </div>
   </div>
+
   <div class="chat-list">
     <!-- Блок чата -->
     <div class="chat-item" *ngFor="let chat of chats">
@@ -18,8 +19,8 @@
       <div class="chat-info">
         <p class="chat-name">{{ chat.name }}</p>
         <p class="chat-details">
-          <span class="last-message">{{ chat.lastMessage }}</span>
-          <span class="last-message-time">{{ chat.lastMessageTime }}</span>
+          <span class="last-message">{{ chat.lastMessageText }}</span>
+          <span class="last-message-time">{{ chat.lastMessageDate | date : 'dd.MM.yyyy' }}</span>
         </p>
       </div>
     </div>
