--- a/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.sass
@@ -2,93 +2,70 @@
 .chat-panel
   padding-top: 10px
   padding-right: 10px
-
-.chat-header
   display: flex
-  align-items: center
-  justify-content: space-between
-
-.settings-button
-  height: 48px
-  border-radius: 20%
-
-.custom-search
-  display: flex
-  align-items: center
-  height: 48px
-  width: 100%
-  border-radius: 30px
-  border: 1px solid black
-  background-color: #f1f1f1
-
-  .search-icon
-    margin-right: 10px
-    margin-left: 10px
-    i
-      font-size: 24px
-
-  .search-input
-    flex: 1
-    border: none
-    outline: none
-    background: transparent
-    padding: 0
-    margin: 0
-    font-size: 18px
-
-/* Стили для блока чата */
-.chat-list
-  flex-grow: 1
   flex-direction: column
-  overflow-y: auto
 
-.chat-item
-  display: flex
-  align-items: center
-  padding: 10px
-  border-radius: 5px
-  transition: box-shadow 0.3s
+  .chat-header
+    display: flex
+    align-items: center
+    justify-content: space-between
 
-.chat-item:hover
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3)
-  background-color: #d9d9d9
-  cursor: pointer
+  .settings-button
+    height: 48px
+    border-radius: 20%
 
-.avatar
-  width: 60px
-  height: 60px
-  border-radius: 50%
-  background-color: #aaa
-  margin-right: 10px
+  /* Стили для блока чата */
+  .chat-list
+    display: flex
+    flex-grow: 1
+    flex-direction: column
+    overflow-y: auto
 
-.chat-info
-  flex: 1
+  .chat-item
+    display: flex
+    align-items: center
+    padding: 10px
+    border-radius: 5px
+    transition: box-shadow 0.3s
 
-.chat-name
-  margin: 0
-  font-size: 17px
+  .chat-item:hover
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3)
+    background-color: #d9d9d9
+    cursor: pointer
 
-.chat-details
-  display: flex
-  justify-content: space-between
-  align-items: center
+  .avatar
+    width: 60px
+    height: 60px
+    border-radius: 50%
+    background-color: #aaa
+    margin-right: 10px
 
-.last-message
-  margin: 0
+  .chat-info
+    flex: 1
+
+  .chat-name
+    margin: 0
+    font-size: 17px
+
+  .chat-details
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+  .last-message
+    margin: 0
 
 
-.last-message-time
-  font-size: 12px
+  .last-message-time
+    font-size: 12px
 
-.custom-modal
-  /* Настройки стилей для модального окна */
-  background-color: white
-  border-radius: 4px
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24)
+  .custom-modal
+    background-color: white
+    border-radius: 4px
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24)
 
-.custom-backdrop
-  /* Настройки стилей для заднего фона *
-  background-color: rgba(0, 0, 0, 0.5)
+  .custom-backdrop
+    background-color: rgba(0, 0, 0, 0.5)
 
 
 
