--- a/WebApp/src/styles.sass
+++ b/WebApp/src/styles.sass
@@ -10,3 +10,51 @@ body
 
 .red-text
   color: red
+
+section
+  padding: 10px 10px 10px 10px
+  position: relative
+
+.custom-search
+  display: flex
+  align-items: center
+  height: 48px
+  width: 100%
+  border-radius: 30px
+  border: 1px solid black
+  background-color: #f1f1f1
+
+  .search-icon
+    margin-right: 10px
+    margin-left: 10px
+    i
+      font-size: 24px
+
+  .search-input
+    flex: 1
+    border: none
+    outline: none
+    background: transparent
+    padding: 0
+    margin: 0
+    font-size: 18px
+
+.contact-item
+  display: flex
+  align-items: center
+  padding: 5px 8px
+  margin: 10px 2px
+  font-size: 15px
+  p
+    margin: 0
+  img
+    width: 50px
+    height: 50px
+    margin-right: 10px
+    border-radius: 50%
+    background-color: #aaa
+
+.contact-item:hover
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3)
+  background-color: #d9d9d9
+  cursor: pointer
