--- a/WebApp/src/styles.sass
+++ b/WebApp/src/styles.sass
@@ -53,6 +53,8 @@ section
     margin-right: 10px
     border-radius: 50%
     background-color: #aaa
+  button
+    margin-left: 100px
 
 .contact-item:hover
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3)
