--- a/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.html
+++ b/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.html
@@ -14,13 +14,16 @@
 
   <div class="chat-list">
     <!-- Блок чата -->
-    <div class="chat-item" *ngFor="let chat of chats">
+    <div class="chat-item" *ngFor="let chat of chats" (click)="openChat(chat.id)">
       <div class="avatar"></div>
       <div class="chat-info">
         <p class="chat-name">{{ chat.name }}</p>
         <p class="chat-details">
-          <span class="last-message">{{ chat.lastMessageText }}</span>
-          <span class="last-message-time">{{ chat.lastMessageDate | date : 'dd.MM.yyyy' }}</span>
+          <span
+            class="last-message">
+            {{ chat.id < 0 ? !chat.lastMessageFromSender ? chat.lastMessageSenderName + ': ' : '' : ''}}{{ chat.lastMessageText }}
+          </span>
+          <span class="last-message-time">{{ chat.lastMessageDate | lastMessageTime }}</span>
         </p>
       </div>
     </div>
