--- a/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
@@ -69,3 +69,11 @@
       margin: 0
       font-size: 18px
 
+.nochat
+
+  h1
+    display: flex
+    justify-content: center
+    margin-top: 40%
+    font-size: 60px
+
