--- a/WebApp/src/app/components/dashboard/chat/dialogs/group-create/group-create.component.html
+++ b/WebApp/src/app/components/dashboard/chat/dialogs/group-create/group-create.component.html
@@ -1,40 +1,42 @@
 <section>
-  <div *ngIf="step === 'contactSelection'">
-    <div class="modal-header">
-      <h3>Выберите контакты</h3>
-      <button class="step-button" (click)="changeStep('groupSettings')">
-        <mat-icon>keyboard_arrow_right</mat-icon>
-      </button>
-    </div>
-    <div class="custom-search">
-      <div class="search-icon">
-        <i class="material-icons">search</i>
+  <form [formGroup]="dataForm" (ngSubmit)="onSubmit()" >
+    <div *ngIf="step === 'contactSelection'">
+      <div class="modal-header">
+        <h3>Выберите контакты</h3>
+        <button type="button" class="step-button" (click)="changeStep('groupSettings')">
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </button>
       </div>
-      <input type="text" class="search-input" placeholder="Поиск">
-    </div>
-    <mat-list>
-      <mat-list-item *ngFor="let contact of contacts">
-        <div class="contact-item">
-          <mat-checkbox></mat-checkbox>
-          <p>{{ contact.name }}</p>
+      <div class="custom-search">
+        <div class="search-icon">
+          <i class="material-icons">search</i>
         </div>
-      </mat-list-item>
-    </mat-list>
-  </div>
-  <div *ngIf="step === 'groupSettings'">
-    <div class="modal-header">
-      <h3>Настройки группы</h3>
-      <button class="step-button" (click)="changeStep('contactSelection')">
-        <mat-icon>keyboard_arrow_left</mat-icon>
-      </button>
-      <button mat-raised-button color="primary" (click)="createGroup()">Создать</button>
+        <input type="text" class="search-input" placeholder="Поиск">
+      </div>
+      <mat-list>
+        <mat-list-item *ngFor="let contact of contacts">
+          <div class="contact-item">
+            <mat-checkbox (change)="toggleContactSelection($event, contact.userId)"/>
+            <p>{{ contact.username }}</p>
+          </div>
+        </mat-list-item>
+      </mat-list>
     </div>
-    <mat-form-field>
-      <input matInput placeholder="Название группы">
-    </mat-form-field>
-    <div class="avatar-selection">
-      <h4>Выбор фотографии</h4>
-      <input type="file" accept="image/*" (change)="onFileSelected($event)">
+    <div *ngIf="step === 'groupSettings'">
+      <div class="modal-header">
+        <h3>Настройки группы</h3>
+        <button type="button" class="step-button" (click)="changeStep('contactSelection')">
+          <mat-icon>keyboard_arrow_left</mat-icon>
+        </button>
+        <button mat-raised-button color="primary" type="submit">Создать</button>
+      </div>
+      <mat-form-field>
+        <input formControlName="chatName" matInput placeholder="Название группы">
+      </mat-form-field>
+<!--      <div class="avatar-selection">-->
+<!--        <h4>Выбор фотографии</h4>-->
+<!--        <input formControlName="avatar" type="file" accept="image/*" (change)="onFileSelected($event)">-->
+<!--      </div>-->
     </div>
-  </div>
+  </form>
 </section>
