--- a/WebApp/src/app/components/dashboard/chat/dialogs/search/search.component.html
+++ b/WebApp/src/app/components/dashboard/chat/dialogs/search/search.component.html
@@ -7,7 +7,7 @@
       <input formControlName="searchText" type="text" class="search-input" placeholder="Поиск">
     </div>
     <mat-list>
-      <mat-list-item *ngFor="let item of contacts | async">
+      <mat-list-item *ngFor="let item of contacts | async" (click)="openChat(item)">
         <div class="contact-item">
           <img src="{{item.photoUrl}}" alt="">
           {{item.username}}
