--- a/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
@@ -32,12 +32,14 @@
       align-items: flex-end
       margin-bottom: 10px
       justify-content: flex-end
+      word-wrap: break-word
 
     .incoming
       display: flex
       align-items: flex-end
       margin-bottom: 10px
       justify-content: flex-start
+      word-wrap: break-word
 
     .message-content
       max-width: 60%
