--- a/WebApp/src/app/components/dashboard/chat/chat/chat.component.html
+++ b/WebApp/src/app/components/dashboard/chat/chat/chat.component.html
@@ -13,7 +13,7 @@
   <div class="box chat-area"
        [class.drag-over]="isDraggingOver" [class.blur]="isDraggingOver" (dragenter)="onFileDragEnter($event)"
        (dragover)="onFileDragOver($event)" (dragleave)="onFileDragLeave($event)" (drop)="onFileDrop($event)">
-    <app-chat-messages [chat]="currentChat"></app-chat-messages>
+    <app-chat-messages [chat]="currentChat" [chatChanged]="chatChanged"></app-chat-messages>
   </div>
   <div class="box">
     <app-chat-profile [chat]="currentChat"></app-chat-profile>
