--- a/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.html
+++ b/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.html
@@ -21,7 +21,8 @@
         <p class="chat-details">
           <span
             class="last-message">
-            {{ chat.id < 0 ? !chat.lastMessageFromSender ? chat.lastMessageSenderName + ': ' : '' : ''}}{{ chat.lastMessageText | slice:0:30 }}
+            {{ chat.id < 0 ? !chat.lastMessageFromSender ? chat.lastMessageSenderName ? chat.lastMessageSenderName + ': ' : '' : '' : ''}}
+            {{ chat.lastMessageText | slice:0:30 }}
           </span>
           <span class="last-message-time">{{ chat.lastMessageDate | lastMessageTime }}</span>
         </p>
