--- a/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.sass
@@ -39,6 +39,15 @@
     border-radius: 50%
     background-color: #aaa
     margin-right: 10px
+    .avatar::after
+      content: ''
+      position: absolute
+      bottom: 0
+      right: 0
+      width: 12px
+      height: 12px
+      border-radius: 50%
+      background-color: blue
 
   .chat-info
     flex: 1
