--- a/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.html
+++ b/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.html
@@ -1,4 +1,4 @@
-<div class="chat-container" *ngIf="chat; else nochat">
+<div class="chat-container" *ngIf="chat; else nochat" (mouseleave)="hideEmojiPicker()">
   <div class="chat-header">
     <h2>{{chat.name}}</h2>
     <div class="chat-header-buttons">
@@ -19,21 +19,26 @@
   </div>
 
   <div class="message-container" #chatList>
-    <div  *ngFor="let message of messages"
-                  [ngClass]="{ 'incoming': message.type == 'other', 'outgoing': message.type == 'my' }">
+    <div *ngFor="let message of messages"
+         [ngClass]="{ 'incoming': message.type == 'other', 'outgoing': message.type == 'my' }">
       <div class="avatar" *ngIf="message.type == 'other'">
         <img
           src="https://s5o.ru/storage/simple/cyber/edt/bb/f9/38/f5/cyberef95b3ecf51.jpg"
           alt="Аватар другого пользователя" class="avatar">
       </div>
       <div class="message-content">
+        <p *ngIf="message.type == 'other' && chat.id < 0" [style.color]="message.sender.nicknameColor" class="nickname">{{message.sender.username}}</p>
         <p>{{message.messageText}}</p>
+        <p class="message-time">{{message.messageDate | lastMessageTime}}</p>
       </div>
     </div>
+    <emoji-mart class="emoji-picker-container" [darkMode]="false" *ngIf="showEmoji" title="Pick your emoji…" emoji="point_up"
+                (mouseenter)="showEmoji = true" (mouseleave)="hideEmojiPicker()"
+                (emojiClick)="onEmojiSelectBtn($event)"></emoji-mart>
   </div>
 
   <form [formGroup]="dataForm" (ngSubmit)="send()" class="chat-input">
-    <button type="button" mat-icon-button>
+    <button type="button" mat-icon-button (mouseenter)="showEmoji = true">
       <mat-icon>insert_emoticon</mat-icon>
     </button>
 
