--- a/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
@@ -32,20 +32,29 @@
       align-items: flex-end
       margin-bottom: 10px
       justify-content: flex-end
-      word-wrap: break-word
 
     .incoming
       display: flex
       align-items: flex-end
       margin-bottom: 10px
       justify-content: flex-start
-      word-wrap: break-word
 
     .message-content
       max-width: 60%
       background-color: #d3d3d3
       padding: 10px
       border-radius: 10px
+      word-wrap: break-word
+      p
+        margin: 0
+      .nickname
+        font-size: 16px
+        font-weight: bold
+        margin-bottom: 5px
+    .message-time
+      display: flex
+      justify-content: flex-end
+      font-size: 11px
 
   .avatar
     width: 40px
@@ -78,4 +87,10 @@
     justify-content: center
     margin-top: 40%
     font-size: 60px
+
+
+.emoji-picker-container
+  position: absolute
+  top: 45%
+  left: 2%
 
