--- a/WebApp/src/styles.sass
+++ b/WebApp/src/styles.sass
@@ -1,3 +1,5 @@
+@import '@ctrl/ngx-emoji-mart/picker'
+
 html, body
   height: 100%
 body
@@ -43,7 +45,7 @@ section
   display: flex
   align-items: center
   padding: 5px 8px
-  margin: 10px 2px
+  margin: 15px 2px
   font-size: 15px
   p
     margin: 0
