--- a/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-messages/chat-messages.component.sass
@@ -39,6 +39,12 @@
       margin-bottom: 10px
       justify-content: flex-start
 
+    .system
+      display: flex
+      align-items: center
+      margin-bottom: 10px
+      justify-content: center
+
     .message-content
       max-width: 60%
       background-color: #d3d3d3
@@ -59,7 +65,6 @@
   .avatar
     width: 40px
     height: 40px
-    background-color: gray
     margin-right: 10px
     border-radius: 50%
 
