--- a/WebApp/src/app/components/dashboard/chat/dialogs/settings/settings.component.html
+++ b/WebApp/src/app/components/dashboard/chat/dialogs/settings/settings.component.html
@@ -3,5 +3,6 @@
   <mat-dialog-content>
     <button mat-button (click)="logout()">Выйти</button>
     <button mat-button (click)="contacts()">Контакты</button>
+    <button mat-button (click)="userProfile()">Профиль</button>
   </mat-dialog-content>
 </div>
