--- a/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.sass
+++ b/WebApp/src/app/components/dashboard/chat/chat-list/chat-list.component.sass
@@ -4,6 +4,7 @@
   padding-right: 10px
   display: flex
   flex-direction: column
+  height: 100%
 
   .chat-header
     display: flex
@@ -33,13 +34,21 @@
     background-color: #d9d9d9
     cursor: pointer
 
-  .avatar
+  .avatar-online, .avatar-offline
+    position: relative
     width: 60px
     height: 60px
     border-radius: 50%
-    background-color: #aaa
     margin-right: 10px
-    .avatar::after
+
+    &:before
+      content: attr(data-initials)
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+
+    &.avatar-online::after
       content: ''
       position: absolute
       bottom: 0
@@ -47,7 +56,45 @@
       width: 12px
       height: 12px
       border-radius: 50%
-      background-color: blue
+      border: 1px solid black
+      background-color: #68ff5a
+
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+      border-radius: 50%
+
+    &.loaded img
+      display: block
+
+    &.loaded::before
+      display: none
+  //.avatar-online
+  //  position: relative
+  //  width: 60px
+  //  height: 60px
+  //  border-radius: 50%
+  //  background-color: #aaa
+  //  margin-right: 10px
+  //
+  //  img
+  //    width: 100%
+  //    height: 100%
+  //    object-fit: cover
+  //    border-radius: 50%
+  //
+  //.avatar-offline
+  //  width: 60px
+  //  height: 60px
+  //  border-radius: 50%
+  //  background-color: #aaa
+  //  margin-right: 10px
+  //  img
+  //    width: 100%
+  //    height: 100%
+  //    object-fit: cover
+  //    border-radius: 50%
 
   .chat-info
     flex: 1
