--- a/WebApp/src/styles.sass
+++ b/WebApp/src/styles.sass
@@ -26,6 +26,19 @@ section
   border: 1px solid black
   background-color: #f1f1f1
 
+  .cancel-search
+    width: 35px
+    height: 35px
+    border-radius: 50%
+    border: none
+    background-color: #f1f1f1
+    cursor: pointer
+    outline: none
+
+    &.focus
+      box-shadow: none
+      border: none
+
   .search-icon
     margin-right: 10px
     margin-left: 10px
@@ -62,3 +75,15 @@ section
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3)
   background-color: #d9d9d9
   cursor: pointer
+
+.modal-header
+  display: flex
+  justify-content: space-between
+  .step-button
+    border-radius: 50%
+    width: 40px
+    height: 40px
+    background-color: #7d84ff
+    border-color: #7d84ff
+
+
